src/components/ui/Card.css
/* A group of cards is an element with several cards in it */
.card-group{   
    display: flex;
    flex-direction: column; /* By default, we want to share space in a column direction */
    justify-content: center;
    align-items: center;

    width: 900px;
    max-width: 900px;
    gap: 1em;
}

/* A card group that is vertically shared */
.card-group--vertical {
    flex-direction: row;
}

.card{
    --_radius: var(--radius, var(--aggressive-border-radius));
    --_bg-opacity: var(--bg-opacity, 0.1);
    
    display: flex;
    flex-direction: column;
    justify-content: center;

    width: 800px;
    max-height: 70vh;

    padding: var(--_radius);

    background-color: rgba(var(--backdrop-color),var(--_bg-opacity));
    border-radius: var(--_radius);

    --backdrop-filter: blur(var(--_radius));
    backdrop-filter: var(--backdrop-filter);
    -webkit-backdrop-filter: var(--backdrop-filter);

    color: var(--text-color-negative);
}


/* Smaller cards, take up less of the width */
.small {
    width: 50%;
    
    --radius: var(--default-border-radius);
}

@media (max-width:900px)  {
    .card-group{
        display: flex;
        flex-direction: column-reverse;

        width: 100%;
        gap: 0;
    }
    
    .card-group--vertical {
        flex-direction: column;
    }
    
    .card{
        --radius: calc(1.5*var(--default-border-radius));
        width: 100%;
        max-height: fit-content;
    
        overflow-x: hidden;
        overflow-y: scroll;
    
        margin: 0;

        /* Remove background effect */
        --bg-opacity: 0;
        border-radius: 0;
        backdrop-filter: none;
    }

    .small {
        width: 100%;
    }
}

